# bevy_embedded_assets

./: Cargo.toml  README.md  build.rs  deny.toml
.github/workflows/: ci.yaml
runtime_assets/: asset.test
src/: asset_reader.rs  lib.rs  plugin.rs
tests/: as_default.rs  as_default_with_fallback.rs  embedded.rs  preloaded.rs
