[package]
name = "bevy_embedded_assets"
version = "0.11.0-rc.3"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "assets"]
readme = "README.md"
description = "A Bevy plugin to embed assets in your game"
repository = "https://github.com/vleue/bevy_embedded_assets"
homepage = "https://github.com/vleue/bevy_embedded_assets"
documentation = "https://docs.rs/bevy_embedded_assets"
categories = ["game-development"]

[features]
default = ["default-source"]
# Support for replacing the default asset source
default-source = ["futures-io", "futures-lite"]

[dependencies.bevy]
version = "0.14.0-rc.4"
default-features = false
features = ["bevy_asset"]

[dependencies]
futures-io = { version = "0.3", optional = true }
futures-lite = { version = "2.0", optional = true }
thiserror = "1.0"

[build-dependencies]
cargo-emit = "0.2.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
