[package]
name = "bevy_embedded_assets"
version = "0.13.0-rc.1"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "assets"]
readme = "README.md"
description = "A Bevy plugin to embed assets in your game"
repository = "https://github.com/vleue/bevy_embedded_assets"
homepage = "https://github.com/vleue/bevy_embedded_assets"
documentation = "https://docs.rs/bevy_embedded_assets"
categories = ["game-development"]

[features]
default = ["default-source"]
# Support for replacing the default asset source
default-source = ["futures-io", "futures-lite", "log"]

[dependencies]
bevy_asset = { version = "0.16.0-rc.3", default-features = false }
bevy_ecs = { version = "0.16.0-rc.3", default-features = false }
bevy_app = { version = "0.16.0-rc.3", default-features = false }

futures-io = { version = "0.3", optional = true }
futures-lite = { version = "2.6", optional = true }
log = { version = "0.4", optional = true }
thiserror = "2.0"

[dev-dependencies]
bevy = { version = "0.16.0-rc.3", default-features = false, features = [
    "bevy_asset",
] }

[build-dependencies]
cargo-emit = "0.2.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

# stripping is required to be able to run test on wasm32-unknown-unknown with rust 1.82 on ubuntu
# https://github.com/rustwasm/wasm-bindgen/issues/4211
[profile.dev]
strip = true
